# linux-app-manager

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
apphub/: main.py
apphub/cli/: banner.py  commands.py  formatters.py  serializers.py
apphub/core/: exceptions.py  hub.py  logger.py  models.py  runtime.py  utils.py
apphub/plugins/: __init__.py  appimage.py  apt.py  base.py  flatpak.py  snap.py
tests/: conftest.py  test_cli.py  test_core.py  test_plugin_appimage.py  test_plugin_apt.py  test_plugin_flatpak.py  test_plugin_snap.py
