[project]
name = "apphub-terminal"
version = "0.1.0"
description = "Linux App Hub - Manage your Linux applications across all formats."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
    "textual>=8.0.0",
    "typer>=0.24.0",
    "rich>=13.0.0",
    "black>=26.5.1",
]

[project.scripts]
apphub = "apphub.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apphub"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.7",
    "twine>=6.2.0",
]
